trust-platform-main/crates/trust-syntax/tests/snapshots/parser_error_recovery__hash_without_identifier.snap
---
source: crates/trust-syntax/tests/parser_error_recovery.rs
assertion_line: 75
expression: "snapshot_parse(r#\"PROGRAM Test\n    # := 1;\nEND_PROGRAM\"#)"
---
SourceFile@0..36
  Program@0..36
    KwProgram@0..7 "PROGRAM"
    Name@7..17
      Ident@8..12 "Test"
    StmtList@17..25
      AssignStmt@17..25
        BinaryExpr@17..23
          NameRef@17..19
            Hash@17..18 "#"
          Assign@19..21 ":="
          Literal@21..23
            IntLiteral@22..23 "1"
        Semicolon@23..24 ";"
    KwEndProgram@25..36 "END_PROGRAM"

---
Errors:
  - expected identifier after '#' at 19..21
