trust-platform-main/crates/trust-syntax/tests/snapshots/parser_error_recovery__missing_end_if.snap
---
source: crates/trust-syntax/tests/parser_error_recovery.rs
assertion_line: 34
expression: "snapshot_parse(r#\"PROGRAM Test\nIF x > 0 THEN\n    y := 1;\n\nEND_PROGRAM\"#)"
---
SourceFile@0..51
  Program@0..51
    KwProgram@0..7 "PROGRAM"
    Name@7..13
      Ident@8..12 "Test"
    StmtList@13..40
      IfStmt@13..40
        KwIf@13..15 "IF"
        BinaryExpr@15..22
          NameRef@15..18
            Ident@16..17 "x"
          Gt@18..19 ">"
          Literal@19..22
            IntLiteral@20..21 "0"
        KwThen@22..26 "THEN"
        AssignStmt@26..40
          BinaryExpr@26..37
            NameRef@26..33
              Ident@31..32 "y"
            Assign@33..35 ":="
            Literal@35..37
              IntLiteral@36..37 "1"
          Semicolon@37..38 ";"
    KwEndProgram@40..51 "END_PROGRAM"

---
Errors:
  - expected END_IF at 40..51
