trust-platform-main/crates/trust-syntax/tests/snapshots/parser_error_recovery__missing_semicolon.snap
---
source: crates/trust-syntax/tests/parser_error_recovery.rs
assertion_line: 65
expression: "snapshot_parse(r#\"PROGRAM Test\n    x := 1\n    y := 2;\nEND_PROGRAM\"#)"
---
SourceFile@0..47
  Program@0..47
    KwProgram@0..7 "PROGRAM"
    Name@7..17
      Ident@8..12 "Test"
    StmtList@17..36
      AssignStmt@17..28
        BinaryExpr@17..28
          NameRef@17..19
            Ident@17..18 "x"
          Assign@19..21 ":="
          Literal@21..28
            IntLiteral@22..23 "1"
      AssignStmt@28..36
        BinaryExpr@28..34
          NameRef@28..30
            Ident@28..29 "y"
          Assign@30..32 ":="
          Literal@32..34
            IntLiteral@33..34 "2"
        Semicolon@34..35 ";"
    KwEndProgram@36..47 "END_PROGRAM"

---
Errors:
  - expected ';' at 28..29
