trust-platform-main/crates/trust-syntax/tests/snapshots/parser_error_recovery__missing_then.snap
---
source: crates/trust-syntax/tests/parser_error_recovery.rs
assertion_line: 45
expression: "snapshot_parse(r#\"PROGRAM Test\nIF x > 0\n    y := 1;\nEND_IF;\nEND_PROGRAM\"#)"
---
SourceFile@0..53
  Program@0..53
    KwProgram@0..7 "PROGRAM"
    Name@7..13
      Ident@8..12 "Test"
    StmtList@13..42
      IfStmt@13..40
        KwIf@13..15 "IF"
        BinaryExpr@15..26
          NameRef@15..18
            Ident@16..17 "x"
          Gt@18..19 ">"
          Literal@19..26
            IntLiteral@20..21 "0"
        AssignStmt@26..34
          BinaryExpr@26..32
            NameRef@26..28
              Ident@26..27 "y"
            Assign@28..30 ":="
            Literal@30..32
              IntLiteral@31..32 "1"
          Semicolon@32..33 ";"
        KwEndIf@34..40 "END_IF"
      EmptyStmt@40..42
        Semicolon@40..41 ";"
    KwEndProgram@42..53 "END_PROGRAM"

---
Errors:
  - expected THEN at 26..27
